# handy

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  hand.h  hand_mesh.cc  hand_mesh.h  handy.cc  handy_options.cc  handy_options.h  handy_renderer.cc  handy_renderer.h  handy_viewer.cc  handy_viewer.h  mesh.cc  mesh.h  pipeline.cc  pipeline.h  shader.cc  shader.h  texture.cc  texture.h
src/shaders/: bones.glslf  bones.glslv  colours.glflv  colours.glslf  hand.glslf  hand.glslv
src/ui/: handy_viewer.ui
